Enforce viewport width and prevent excess white space on mobile devices

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,4 +4,9 @@ html {
   scrollbar-width: thin;
 }
 
+html, body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 @import '~bulma/bulma.sass';
